# opengl-vpp-skintone

./: 4.2.texture.meiyan.rgb.fs  4.2.texture.meiyan.yuv.fs  4.2.texture.rgb.fs  4.2.texture.rgb.vs  4.2.texture.skin_tone.rgb.fs  4.2.texture.yuv.fs  4.2.texture.yuv.vs  CMakeLists.txt  README.md  glad.c  main-rgb-rgb.cpp  main-yuv-yuv.cpp  shader_s.h  stb_image.cpp  test2-nv12.yuv
include/glad/: glad.h
